manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82084642"
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: 82084642
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yaml"]
          volumeMounts:
          - mountPath: /mnt/cloud-82084642
            name: 82084642-volume
            readOnly: false
            subPath: cloud-82084642
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: "82084642-volume"
        persistentVolumeClaim:
          claimName: ce-aa-pvc
      - name: application-properties
        configMap:
          name: "82084642-configmap"
          items:
            - key: application.yaml
              path: application.yaml
          defaultMode: 420
